--- a/requirements.txt
+++ b/requirements.txt
@@ -2,27 +2,32 @@
 python>=3.7
 
 # Core dependencies
-datetime
-typing
-
-# Logging
-logging
+python>=3.7
 
 # Configuration management
-python-dotenv
+python-dotenv==1.0.0
 
-# Template rendering
-string
+# Data manipulation and analysis
+numpy==1.24.3
+pandas==2.0.1
 
-# Additional libraries
-numpy
-pandas
-os
-time
-random
+# Trading framework (if still used)
+freqtrade==2023.5
 
-# Freqtrade (assuming it's used based on the backtest command)
-freqtrade
+# Logging (if custom logging is implemented)
+loguru==0.7.0
 
-# Regular expressions
-re
+# Genetic algorithm
+deap==1.3.3
+
+# Optional: for improved performance
+numba==0.57.0
+
+# Optional: for data visualization
+matplotlib==3.7.1
+seaborn==0.12.2
+
+# Development tools
+pytest==7.3.1
+flake8==6.0.0
+black==23.3.0
