--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ user_data/data/*
 user_data/backtest_results/*
 !user_data/backtest_results/.gitkeep
 
+scripts/outputs/*
+!scripts/outputs/.gitkeep
+
 
 user_data/strategies/*
 !user_data/strategies/.gitkeep
