--- a/user_data/config_large.json
+++ b/user_data/config_large.json
@@ -122,7 +122,7 @@
       "balance_dust_level": 0.01
     },
     "api_server": {
-      "enabled": false,
+      "enabled": true,
       "listen_ip_address": "0.0.0.0",
       "listen_port": 8080,
       "verbosity": "info",
