--- a/user_data/config.json
+++ b/user_data/config.json
@@ -195,14 +195,14 @@
       "balance_dust_level": 0.01
     },
     "api_server": {
-      "enabled": false,
+      "enabled": true,
       "listen_ip_address": "0.0.0.0",
       "listen_port": 8080,
       "verbosity": "info",
       "jwt_secret_key": "somethingrandom",
       "CORS_origins": [],
-      "username": "",
-      "password": ""
+      "username": "who",
+      "password": "iamyourfather"
     },
     "bot_name": "freqtrade",
     "initial_state": "running",
