--- a/user_data/config_large.json
+++ b/user_data/config_large.json
@@ -49,7 +49,7 @@
       "pair_whitelist": [
         "ICP/USDT", "SUI/USDT", "SOL/USDT", "ETHFI/USDT", "XRP/USDT", "SEI/USDT", "PEPE/USDT", "RUNE/USDT", 
         "1INCH/USDT", "DOGE/USDT", "VIDT/USDT", "SLF/USDT", "DYDX/USDT", "BB/USDT", "LEVER/USDT", "IO/USDT",
-        "STMX/USDT", "GALA/USDT", "BCH/USDT", "KEY/USDT", "LDO/USDT", "RDNT/USDT", "TRX/USDT", "INJ/USDT", 
+        "GALA/USDT", "BCH/USDT", "KEY/USDT", "LDO/USDT", "RDNT/USDT", "TRX/USDT", "INJ/USDT", 
         "BOME/USDT", "UNI/USDT", "LINK/USDT", "EGLD/USDT", "PEOPLE/USDT", "ATOM/USDT", "JASMY/USDT", "ENS/USDT", 
         "BONK/USDT", "MKR/USDT", "ELF/USDT", "TAO/USDT", "DOGS/USDT", "SYS/USDT", "GMT/USDT", "MATIC/USDT", 
         "RENDER/USDT", "SHIB/USDT", "NOT/USDT", "TRB/USDT", "TIA/USDT", "NEAR/USDT", "STRK/USDT", "ARB/USDT", 
