--- a/user_data/config_large.json
+++ b/user_data/config_large.json
@@ -93,7 +93,6 @@
         "LIT/USDT",
         "PORTO/USDT",
         "PLA/USDT",
-        "PEOPLE/USDT",
         "MAGIC/USDT",
         "CHR/USDT",
         "LINA/USDT",
@@ -147,7 +146,6 @@
         "JOE/USDT",
         "GAS/USDT",
         "GLMR/USDT",
-        "SC/USDT",
         "MOB/USDT",
         "FLOKI/USDT",
         "GNO/USDT",
@@ -223,7 +221,7 @@
         "STORJ/USDT",
         "FIRO/USDT",
         "GRT/USDT",
-        "CELO/USDT",
+        // "CELO/USDT",
         "PIVX/USDT",
         "KAVA/USDT",
         "QKC/USDT",
@@ -246,7 +244,7 @@
         "KDA/USDT",
         "SFP/USDT",
         "OCEAN/USDT",
-        "HFT/USDT",
+        // "HFT/USDT",
         "RAD/USDT",
         "ENJ/USDT",
         "FTT/USDT",
@@ -298,7 +296,7 @@
         "FXS/USDT",
         "AUDIO/USDT",
         "GLM/USDT",
-        "DCR/USDT",
+        // "DCR/USDT",
         "DIA/USDT",
         "CLV/USDT",
         "RAY/USDT",
@@ -321,7 +319,7 @@
         "MLN/USDT",
         "STMX/USDT",
         "CVX/USDT",
-        "OXT/USDT",
+        // "OXT/USDT",
         "IQ/USDT",
         "NEAR/USDT",
         "BONK/USDT",
