--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ results/*
 
 bestgenerations/*
 !bestgenerations/.gitkeep
+
+candidates/*
+!candidates/.gitkeep
+
+user_data/config-hafbmvvr.json
+user_data/config-notakai.json
+user_data/config-TheGreateDivergenceSpot.json
