--- a/user_data/config_one.json
+++ b/user_data/config_one.json
@@ -47,7 +47,7 @@
         "rateLimit": 200
       },
       "pair_whitelist": [
-        "LEVER/USDT"
+        "BTC/USDT"
       ]
     },
     "pairlists": [
