--- a/user_data/config_large.json
+++ b/user_data/config_large.json
@@ -47,284 +47,8 @@
         "rateLimit": 200
       },
       "pair_whitelist": [
-        "POLYX/USDT",
-        "LOOM/USDT",
-        "KLAY/USDT",
-        "PHB/USDT",
-        "EGLD/USDT",
-        "LAZIO/USDT",
-        "QI/USDT",
-        "DREP/USDT",
-        "CTXC/USDT",
-        "AXS/USDT",
-        "WOO/USDT",
-        "NEXO/USDT",
-        "UNFI/USDT",
-        "PERP/USDT",
-        "KEY/USDT",
-        "EDU/USDT",
-        "VTHO/USDT",
-        "MTL/USDT",
-        "CRV/USDT",
-        "CVP/USDT",
-        "ZIL/USDT",
-        "CTK/USDT",
-        "RARE/USDT",
-        "AAVE/USDT",
-        "ATA/USDT",
-        "HIVE/USDT",
-        "BADGER/USDT",
-        "LQTY/USDT",
-        "LTO/USDT",
-        "BAL/USDT",
-        "API3/USDT",
-        "MATIC/USDT",
-        "ZEN/USDT",
-        "REEF/USDT",
-        "UFT/USDT",
-        "XNO/USDT",
-        "DF/USDT",
-        "KSM/USDT",
-        "AKRO/USDT",
-        "MBOX/USDT",
-        "TIA/USDT",
-        "JUV/USDT",
-        "SLP/USDT",
-        "LIT/USDT",
-        "PORTO/USDT",
-        "PLA/USDT",
-        "MAGIC/USDT",
-        "CHR/USDT",
-        "LINA/USDT",
-        "RIF/USDT",
-        "ONT/USDT",
-        "CFX/USDT",
-        "VIB/USDT",
-        "ACH/USDT",
-        "TKO/USDT",
-        "BTTC/USDT",
-        "T/USDT",
-        "COMP/USDT",
-        "ALPACA/USDT",
-        "IOTA/USDT",
-        "BAKE/USDT",
-        "MASK/USDT",
-        "PENDLE/USDT",
-        "STEEM/USDT",
-        "IMX/USDT",
-        "UTK/USDT",
-        "REN/USDT",
-        "RSR/USDT",
-        "IRIS/USDT",
-        "FLOW/USDT",
-        "ALPHA/USDT",
-        "LDO/USDT",
-        "OOKI/USDT",
-        "SKL/USDT",
-        "CVC/USDT",
-        "LEVER/USDT",
-        "AMP/USDT",
-        "DATA/USDT",
-        "GMX/USDT",
-        "JTO/USDT",
-        "CELR/USDT",
-        "ANKR/USDT",
-        "AI/USDT",
-        "ACA/USDT",
-        "SCRT/USDT",
-        "DYDX/USDT",
-        "FET/USDT",
-        "DENT/USDT",
-        "NKN/USDT",
-        "ATM/USDT",
-        "INJ/USDT",
-        "AGIX/USDT",
-        "OP/USDT",
-        "IOTX/USDT",
-        "RNDR/USDT",
-        "ZRX/USDT",
-        "JOE/USDT",
-        "GAS/USDT",
-        "GLMR/USDT",
-        "MOB/USDT",
-        "FLOKI/USDT",
-        "GNO/USDT",
-        "SEI/USDT",
-        "AR/USDT",
-        "ALICE/USDT",
-        "ASTR/USDT",
-        "ILV/USDT",
-        "DODO/USDT",
-        "RDNT/USDT",
-        "LPT/USDT",
-        "BURGER/USDT",
-        "AERGO/USDT",
-        "ARDR/USDT",
-        "RLC/USDT",
-        "FOR/USDT",
-        "SANTOS/USDT",
-        "DAR/USDT",
-        "MBL/USDT",
-        "CYBER/USDT",
-        "FIO/USDT",
-        "LOKA/USDT",
-        "STPT/USDT",
-        "LINK/USDT",
-        "ICX/USDT",
-        "EPX/USDT",
-        "DOCK/USDT",
-        "JASMY/USDT",
-        "FORTH/USDT",
-        "HOOK/USDT",
-        "ASR/USDT",
-        "POND/USDT",
-        "XVG/USDT",
-        "HIGH/USDT",
-        "CTSI/USDT",
-        "OSMO/USDT",
-        "NEO/USDT",
-        "KMD/USDT",
-        "OGN/USDT",
-        "YGG/USDT",
-        "REI/USDT",
-        "GALA/USDT",
-        "LRC/USDT",
-        "MDX/USDT",
-        "FLUX/USDT",
-        "PNT/USDT",
-        "ARK/USDT",
-        "SUI/USDT",
-        "PSG/USDT",
-        "AST/USDT",
-        "CITY/USDT",
-        "CHZ/USDT",
-        "HBAR/USDT",
-        "CHESS/USDT",
-        "UMA/USDT",
-        "GNS/USDT",
-        "GAL/USDT",
-        "POLS/USDT",
-        "CAKE/USDT",
-        "QUICK/USDT",
-        "ARKM/USDT",
-        "MAV/USDT",
-        "COMBO/USDT",
-        "ELF/USDT",
-        "PHA/USDT",
-        "STRAX/USDT",
-        "MKR/USDT",
-        "XEC/USDT",
-        "ALPINE/USDT",
-        "CREAM/USDT",
-        "COTI/USDT",
-        "RVN/USDT",
-        "STORJ/USDT",
-        "FIRO/USDT",
-        "GRT/USDT",
-        // "CELO/USDT",
-        "PIVX/USDT",
-        "KAVA/USDT",
-        "QKC/USDT",
-        "DUSK/USDT",
-        "FTM/USDT",
-        "MDT/USDT",
-        "GTC/USDT",
-        "BAR/USDT",
-        "XEM/USDT",
-        "TFUEL/USDT",
-        "RPL/USDT",
-        "OAX/USDT",
-        "ROSE/USDT",
-        "NFP/USDT",
-        "C98/USDT",
-        "KNC/USDT",
-        "ANT/USDT",
-        "AVA/USDT",
-        "ACM/USDT",
-        "KDA/USDT",
-        "SFP/USDT",
-        "OCEAN/USDT",
-        // "HFT/USDT",
-        "RAD/USDT",
-        "ENJ/USDT",
-        "FTT/USDT",
-        "MOVR/USDT",
-        "SAND/USDT",
-        "PEPE/USDT",
-        "SYN/USDT",
-        "WNXM/USDT",
-        "GMT/USDT",
-        "SUN/USDT",
-        "QTUM/USDT",
-        "PYR/USDT",
-        "SSV/USDT",
-        "ENS/USDT",
-        "VOXEL/USDT",
-        "KP3R/USDT",
-        "SUPER/USDT",
-        "STG/USDT",
-        "BLZ/USDT",
-        "LUNA/USDT",
-        "ACE/USDT",
-        "REQ/USDT",
-        "ONG/USDT",
-        "TWT/USDT",
-        "AMB/USDT",
-        "WAVES/USDT",
-        "FUN/USDT",
-        "XTZ/USDT",
-        "ARB/USDT",
-        "CKB/USDT",
-        "IDEX/USDT",
-        "GHST/USDT",
-        "SXP/USDT",
-        "BAND/USDT",
-        "POWR/USDT",
-        "PROM/USDT",
-        "ARPA/USDT",
-        "ID/USDT",
-        "BSW/USDT",
-        "DEGO/USDT",
-        "PUNDIX/USDT",
-        "APT/USDT",
-        "ALCX/USDT",
-        "FRONT/USDT",
-        "ERN/USDT",
-        "AGLD/USDT",
-        "SNT/USDT",
-        "NTRN/USDT",
-        "FXS/USDT",
-        "AUDIO/USDT",
-        "GLM/USDT",
-        // "DCR/USDT",
-        "DIA/USDT",
-        "CLV/USDT",
-        "RAY/USDT",
-        "TRU/USDT",
-        "LUNC/USDT",
-        "JST/USDT",
-        "STX/USDT",
-        "FIDA/USDT",
-        "TLM/USDT",
-        "NMR/USDT",
-        "FIS/USDT",
-        "RUNE/USDT",
-        "XVS/USDT",
-        "BLUR/USDT",
-        "BOND/USDT",
-        "HARD/USDT",
-        "FARM/USDT",
-        "WLD/USDT",
-        "QNT/USDT",
-        "MLN/USDT",
-        "STMX/USDT",
-        "CVX/USDT",
-        // "OXT/USDT",
-        "IQ/USDT",
-        "NEAR/USDT",
-        "BONK/USDT",
-        "APE/USDT"
-    ]
+        "FTT/USDT"
+      ]
     },
     "pairlists": [
       {
