feature: random select trading pairs and max_trade_amount

--- a/user_data/config.json
+++ b/user_data/config.json
@@ -1,214 +1,352 @@
 {
-    "max_open_trades": 2,
-    "stake_currency": "USDT",
-    "stake_amount": "unlimited",
-    "tradable_balance_ratio": 0.99,
-    "timeframe": "5m",
-    "fiat_display_currency": "CNY",
-    "dry_run": true,
-    "dry_run_wallet": 60,
-    "cancel_open_orders_on_exit": false,
-    "use_exit_signal": true,
-    "exit_profit_only": false,
-    "ignore_roi_if_entry_signal": false,
-    "unfilledtimeout": {
-      "entry": 10,
-      "exit": 10,
-      "exit_timeout_count": 0,
-      "unit": "minutes"
-    },
-    "entry_pricing": {
-      "price_side": "other",
-      "use_order_book": true,
-      "order_book_top": 1,
-      "price_last_balance": 0.0,
-      "check_depth_of_market": {
-        "enabled": false,
-        "bids_to_ask_delta": 1
-      }
-    },
-    "exit_pricing": {
-      "price_side": "other",
-      "use_order_book": true,
-      "order_book_top": 1
-    },
-    "exchange": {
-      "name": "binance",
-      "key": "",
-      "secret": "",
-      "ccxt_config": {
-        "enableRateLimit": true,
-        "httpsProxy": "http://127.0.0.1:7890"
-      },
-      "ccxt_async_config": {
-        "enableRateLimit": true,
-        "rateLimit": 200
-      },
-      "pair_whitelist": [
-      "PORTO/USDT",
-      "SANTOS/USDT",
-      "VGX/USDT",
-      "LAZIO/USDT",
-      "STG/USDT",
-      "ALPINE/USDT",
-      "XEC/USDT",
-      "LOKA/USDT",
-      "KEY/USDT",
-      "FORTH/USDT",
-      "KMD/USDT",
-      "REQ/USDT",
-      "PLA/USDT",
-      "DCR/USDT",
-      "LDO/USDT",
-      "XVG/USDT",
-      "PYR/USDT",
-      "DREP/USDT",
-      "DEXE/USDT",
-      "DOCK/USDT",
-      "FIDA/USDT",
-      "WTC/USDT",
-      "POND/USDT",
-      "RLC/USDT",
-      "INJ/USDT",
-      "SPELL/USDT",
-      "CLV/USDT",
-      "MASK/USDT",
-      "WING/USDT",
-      "MFT/USDT",
-      "PERL/USDT",
-      "LEVER/USDT",
-      "PSG/USDT",
-      "OP/USDT",
-      "RAD/USDT",
-      "FRONT/USDT",
-      "FLUX/USDT",
-      "BTC/USDT",
-      "ETH/USDT",
-      "XRP/USDT",
-      "LTC/USDT",
-      "BCH/USDT",
-      "AMP/USDT",
-      "POLY/USDT",
-      "HNT/USDT",
-      "RNDR/USDT",
-      "AVA/USDT",
-      "ASTR/USDT",
-      "REI/USDT",
-      "VIDT/USDT",
-      "BURGER/USDT",
-      "JUV/USDT",
-      "ANC/USDT",
-      "BEAM/USDT",
-      "ASR/USDT",
-      "BOND/USDT",
-      "WNXM/USDT",
-      "FIRO/USDT",
-      "MIR/USDT",
-      "PUNDIX/USDT",
-      "LUNA/USDT",
-      "TRB/USDT",
-      "BAND/USDT",
-      "LTO/USDT",
-      "MDX/USDT",
-      "FOR/USDT",
-      "ACH/USDT",
-      "BSW/USDT",
-      "PERP/USDT",
-      "QI/USDT",
-      "OG/USDT",
-      "TVK/USDT",
-      "IDEX/USDT",
-      "CTXC/USDT",
-      "PEOPLE/USDT",
-      "PHA/USDT",
-      "YGG/USDT",
-      "BIFI/USDT",
-      "RIF/USDT",
-      "BETA/USDT",
-      "SRM/USDT",
-      "ACA/USDT",
-      "AUTO/USDT",
-      "VITE/USDT",
-      "PHB/USDT",
-      "COS/USDT"
-      ]
-    },
-    "pairlists": [
-      {
-        "method": "StaticPairList"
-      },
-      {
-        "method": "ShuffleFilter",
-        "seed": 42
-      }
-    ],
-    "edge": {
+  "max_open_trades": 1,
+  "stake_currency": "USDT",
+  "stake_amount": "unlimited",
+  "tradable_balance_ratio": 0.99,
+  "timeframe": "5m",
+  "fiat_display_currency": "CNY",
+  "dry_run": true,
+  "dry_run_wallet": 60,
+  "cancel_open_orders_on_exit": false,
+  "use_exit_signal": true,
+  "exit_profit_only": false,
+  "ignore_roi_if_entry_signal": false,
+  "unfilledtimeout": {
+    "entry": 10,
+    "exit": 10,
+    "exit_timeout_count": 0,
+    "unit": "minutes"
+  },
+  "entry_pricing": {
+    "price_side": "other",
+    "use_order_book": true,
+    "order_book_top": 1,
+    "price_last_balance": 0.0,
+    "check_depth_of_market": {
       "enabled": false,
-      "process_throttle_secs": 3600,
-      "calculate_since_number_of_days": 14,
-      "allowed_risk": 0.01,
-      "stoploss_range_min": -0.01,
-      "stoploss_range_max": -0.1,
-      "stoploss_range_step": -0.01,
-      "minimum_winrate": 0.60,
-      "minimum_expectancy": 0.20,
-      "min_trade_number": 10,
-      "max_trade_duration_minute": 1440,
-      "remove_pumps": false
-    },
-    "telegram": {
-      "enabled": true,
-      "token": "",
-      "chat_id": "",
-      "keyboard": [
-        [
-          "/daily",
-          "/stats",
-          "/balance",
-          "/profit"
-        ],
-        [
-          "/status table",
-          "/performance",
-          "/whitelist"
-        ],
-        [
-          "/reload_config",
-          "/count",
-          "/logs"
-        ]
-      ],
-      "notification_settings": {
-        "status": "silent",
-        "warning": "on",
-        "startup": "silent",
-        "entry": "off",
-        "exit": "off",
-        "entry_cancel": "silent",
-        "exit_cancel": "silent",
-        "entry_fill": "silent",
-        "exit_fill": "silent",
-        "protection_trigger": "silent",
-        "protection_trigger_global": "silent"
-      },
-      "reload": true,
-      "balance_dust_level": 0.01
-    },
-    "api_server": {
-      "enabled": true,
-      "listen_ip_address": "0.0.0.0",
-      "listen_port": 8080,
-      "verbosity": "info",
-      "jwt_secret_key": "somethingrandom",
-      "CORS_origins": [],
-      "username": "who",
-      "password": "iamyourfather"
-    },
-    "bot_name": "freqtrade",
-    "initial_state": "running",
-    "force_entry_enable": false,
-    "internals": {
-      "process_throttle_secs": 5
+      "bids_to_ask_delta": 1
     }
+  },
+  "exit_pricing": {
+    "price_side": "other",
+    "use_order_book": true,
+    "order_book_top": 1
+  },
+  "exchange": {
+    "name": "binance",
+    "key": "",
+    "secret": "",
+    "ccxt_config": {
+      "enableRateLimit": true,
+      "httpsProxy": "http://127.0.0.1:7890"
+    },
+    "ccxt_async_config": {
+      "enableRateLimit": true,
+      "rateLimit": 200
+    },
+    "pair_whitelist": [
+        "POLYX/USDT",
+        "LOOM/USDT",
+        "KLAY/USDT",
+        "PHB/USDT",
+        "EGLD/USDT",
+        "LAZIO/USDT",
+        "QI/USDT",
+        "DREP/USDT",
+        "CTXC/USDT",
+        "AXS/USDT",
+        "WOO/USDT",
+        "NEXO/USDT",
+        "UNFI/USDT",
+        "PERP/USDT",
+        "KEY/USDT",
+        "EDU/USDT",
+        "VTHO/USDT",
+        "MTL/USDT",
+        "CRV/USDT",
+        "CVP/USDT",
+        "ZIL/USDT",
+        "CTK/USDT",
+        "RARE/USDT",
+        "AAVE/USDT",
+        "ATA/USDT",
+        "HIVE/USDT",
+        "BADGER/USDT",
+        "LQTY/USDT",
+        "LTO/USDT",
+        "BAL/USDT",
+        "API3/USDT",
+        "MATIC/USDT",
+        "ZEN/USDT",
+        "REEF/USDT",
+        "UFT/USDT",
+        "XNO/USDT",
+        "DF/USDT",
+        "KSM/USDT",
+        "AKRO/USDT",
+        "MBOX/USDT",
+        "TIA/USDT",
+        "JUV/USDT",
+        "SLP/USDT",
+        "LIT/USDT",
+        "PORTO/USDT",
+        "PLA/USDT",
+        "MAGIC/USDT",
+        "CHR/USDT",
+        "LINA/USDT",
+        "RIF/USDT",
+        "ONT/USDT",
+        "CFX/USDT",
+        "VIB/USDT",
+        "ACH/USDT",
+        "TKO/USDT",
+        "BTTC/USDT",
+        "T/USDT",
+        "COMP/USDT",
+        "ALPACA/USDT",
+        "IOTA/USDT",
+        "BAKE/USDT",
+        "MASK/USDT",
+        "PENDLE/USDT",
+        "STEEM/USDT",
+        "IMX/USDT",
+        "UTK/USDT",
+        "REN/USDT",
+        "RSR/USDT",
+        "IRIS/USDT",
+        "FLOW/USDT",
+        "ALPHA/USDT",
+        "LDO/USDT",
+        "OOKI/USDT",
+        "SKL/USDT",
+        "CVC/USDT",
+        "LEVER/USDT",
+        "AMP/USDT",
+        "DATA/USDT",
+        "GMX/USDT",
+        "JTO/USDT",
+        "CELR/USDT",
+        "ANKR/USDT",
+        "AI/USDT",
+        "ACA/USDT",
+        "SCRT/USDT",
+        "DYDX/USDT",
+        "FET/USDT",
+        "DENT/USDT",
+        "NKN/USDT",
+        "ATM/USDT",
+        "INJ/USDT",
+        "AGIX/USDT",
+        "OP/USDT",
+        "IOTX/USDT",
+        "RNDR/USDT",
+        "ZRX/USDT",
+        "JOE/USDT",
+        "GAS/USDT",
+        "GLMR/USDT",
+        "MOB/USDT",
+        "FLOKI/USDT",
+        "GNO/USDT",
+        "SEI/USDT",
+        "AR/USDT",
+        "ALICE/USDT",
+        "ASTR/USDT",
+        "ILV/USDT",
+        "DODO/USDT",
+        "RDNT/USDT",
+        "LPT/USDT",
+        "BURGER/USDT",
+        "AERGO/USDT",
+        "ARDR/USDT",
+        "RLC/USDT",
+        "FOR/USDT",
+        "SANTOS/USDT",
+        "DAR/USDT",
+        "MBL/USDT",
+        "CYBER/USDT",
+        "FIO/USDT",
+        "LOKA/USDT",
+        "STPT/USDT",
+        "LINK/USDT",
+        "ICX/USDT",
+        "EPX/USDT",
+        "DOCK/USDT",
+        "JASMY/USDT",
+        "FORTH/USDT",
+        "HOOK/USDT",
+        "ASR/USDT",
+        "POND/USDT",
+        "XVG/USDT",
+        "HIGH/USDT",
+        "CTSI/USDT",
+        "OSMO/USDT",
+        "NEO/USDT",
+        "KMD/USDT",
+        "OGN/USDT",
+        "YGG/USDT",
+        "REI/USDT",
+        "GALA/USDT",
+        "LRC/USDT",
+        "MDX/USDT",
+        "FLUX/USDT",
+        "PNT/USDT",
+        "ARK/USDT",
+        "SUI/USDT",
+        "PSG/USDT",
+        "AST/USDT",
+        "CITY/USDT",
+        "CHZ/USDT",
+        "HBAR/USDT",
+        "CHESS/USDT",
+        "UMA/USDT",
+        "GNS/USDT",
+        "GAL/USDT",
+        "POLS/USDT",
+        "CAKE/USDT",
+        "QUICK/USDT",
+        "ARKM/USDT",
+        "MAV/USDT",
+        "COMBO/USDT",
+        "ELF/USDT",
+        "PHA/USDT",
+        "STRAX/USDT",
+        "MKR/USDT",
+        "XEC/USDT",
+        "ALPINE/USDT",
+        "CREAM/USDT",
+        "COTI/USDT",
+        "RVN/USDT",
+        "STORJ/USDT",
+        "FIRO/USDT",
+        "GRT/USDT",
+        "CELO/USDT",
+        "PIVX/USDT",
+        "KAVA/USDT",
+        "QKC/USDT",
+        "DUSK/USDT",
+        "FTM/USDT",
+        "MDT/USDT",
+        "GTC/USDT",
+        "BAR/USDT",
+        "XEM/USDT",
+        "TFUEL/USDT",
+        "RPL/USDT",
+        "OAX/USDT",
+        "ROSE/USDT",
+        "NFP/USDT",
+        "C98/USDT",
+        "KNC/USDT",
+        "ANT/USDT",
+        "AVA/USDT",
+        "ACM/USDT",
+        "KDA/USDT",
+        "SFP/USDT",
+        "OCEAN/USDT",
+        "HFT/USDT",
+        "RAD/USDT",
+        "ENJ/USDT",
+        "FTT/USDT",
+        "MOVR/USDT",
+        "SAND/USDT",
+        "PEPE/USDT",
+        "SYN/USDT",
+        "WNXM/USDT",
+        "GMT/USDT",
+        "SUN/USDT",
+        "QTUM/USDT",
+        "PYR/USDT",
+        "SSV/USDT",
+        "ENS/USDT",
+        "VOXEL/USDT",
+        "KP3R/USDT",
+        "SUPER/USDT",
+        "STG/USDT",
+        "BLZ/USDT",
+        "LUNA/USDT",
+        "ACE/USDT",
+        "REQ/USDT",
+        "ONG/USDT",
+        "TWT/USDT",
+        "AMB/USDT",
+        "WAVES/USDT",
+        "FUN/USDT",
+        "XTZ/USDT",
+        "ARB/USDT",
+        "CKB/USDT",
+        "IDEX/USDT",
+        "GHST/USDT",
+        "SXP/USDT",
+        "BAND/USDT",
+        "POWR/USDT",
+        "PROM/USDT",
+        "ARPA/USDT",
+        "ID/USDT",
+        "BSW/USDT",
+        "DEGO/USDT",
+        "PUNDIX/USDT",
+        "APT/USDT",
+        "ALCX/USDT",
+        "FRONT/USDT",
+        "ERN/USDT",
+        "AGLD/USDT",
+        "SNT/USDT",
+        "NTRN/USDT",
+        "FXS/USDT",
+        "AUDIO/USDT",
+        "GLM/USDT",
+        "DCR/USDT",
+        "DIA/USDT",
+        "CLV/USDT",
+        "RAY/USDT",
+        "TRU/USDT",
+        "LUNC/USDT",
+        "JST/USDT",
+        "STX/USDT",
+        "FIDA/USDT",
+        "TLM/USDT",
+        "NMR/USDT",
+        "FIS/USDT",
+        "RUNE/USDT",
+        "XVS/USDT",
+        "BLUR/USDT",
+        "BOND/USDT",
+        "HARD/USDT",
+        "FARM/USDT",
+        "WLD/USDT",
+        "QNT/USDT",
+        "MLN/USDT",
+        "STMX/USDT",
+        "CVX/USDT",
+        "OXT/USDT",
+        "IQ/USDT",
+        "NEAR/USDT",
+        "BONK/USDT",
+        "APE/USDT"
+    ]
+  },
+  "pairlists": [
+    {
+      "method": "StaticPairList"
+    },
+    {
+      "method": "ShuffleFilter",
+      "seed": 42
+    }
+  ],
+  "api_server": {
+    "enabled": true,
+    "listen_ip_address": "0.0.0.0",
+    "listen_port": 8080,
+    "verbosity": "info",
+    "jwt_secret_key": "somethingrandom",
+    "CORS_origins": [],
+    "username": "admin",
+    "password": "passwordispassword"
+  },
+  "bot_name": "freqtrade",
+  "initial_state": "running",
+  "force_entry_enable": false,
+  "internals": {
+    "process_throttle_secs": 5
   }
-  
+}
