--- a/user_data/config.json
+++ b/user_data/config.json
@@ -45,283 +45,390 @@
       "rateLimit": 200
     },
     "pair_whitelist": [
-        "POLYX/USDT",
-        "LOOM/USDT",
-        "KLAY/USDT",
-        "PHB/USDT",
-        "EGLD/USDT",
-        "LAZIO/USDT",
-        "QI/USDT",
-        "DREP/USDT",
-        "CTXC/USDT",
-        "AXS/USDT",
-        "WOO/USDT",
-        "NEXO/USDT",
-        "UNFI/USDT",
-        "PERP/USDT",
-        "KEY/USDT",
-        "EDU/USDT",
-        "VTHO/USDT",
-        "MTL/USDT",
-        "CRV/USDT",
-        "CVP/USDT",
-        "ZIL/USDT",
-        "CTK/USDT",
-        "RARE/USDT",
-        "AAVE/USDT",
-        "ATA/USDT",
-        "HIVE/USDT",
-        "BADGER/USDT",
-        "LQTY/USDT",
-        "LTO/USDT",
-        "BAL/USDT",
-        "API3/USDT",
-        "MATIC/USDT",
-        "ZEN/USDT",
-        "REEF/USDT",
-        "UFT/USDT",
-        "XNO/USDT",
-        "DF/USDT",
-        "KSM/USDT",
-        "AKRO/USDT",
-        "MBOX/USDT",
-        "TIA/USDT",
-        "JUV/USDT",
-        "SLP/USDT",
-        "LIT/USDT",
-        "PORTO/USDT",
-        "PLA/USDT",
-        "MAGIC/USDT",
-        "CHR/USDT",
-        "LINA/USDT",
-        "RIF/USDT",
-        "ONT/USDT",
-        "CFX/USDT",
-        "VIB/USDT",
-        "ACH/USDT",
-        "TKO/USDT",
-        "BTTC/USDT",
-        "T/USDT",
-        "COMP/USDT",
-        "ALPACA/USDT",
-        "IOTA/USDT",
-        "BAKE/USDT",
-        "MASK/USDT",
-        "PENDLE/USDT",
-        "STEEM/USDT",
-        "IMX/USDT",
-        "UTK/USDT",
-        "REN/USDT",
-        "RSR/USDT",
-        "IRIS/USDT",
-        "FLOW/USDT",
-        "ALPHA/USDT",
-        "LDO/USDT",
-        "OOKI/USDT",
-        "SKL/USDT",
-        "CVC/USDT",
-        "LEVER/USDT",
-        "AMP/USDT",
-        "DATA/USDT",
-        "GMX/USDT",
-        "JTO/USDT",
-        "CELR/USDT",
-        "ANKR/USDT",
-        "AI/USDT",
-        "ACA/USDT",
-        "SCRT/USDT",
-        "DYDX/USDT",
-        "FET/USDT",
-        "DENT/USDT",
-        "NKN/USDT",
-        "ATM/USDT",
-        "INJ/USDT",
-        "AGIX/USDT",
-        "OP/USDT",
-        "IOTX/USDT",
-        "RNDR/USDT",
-        "ZRX/USDT",
-        "JOE/USDT",
-        "GAS/USDT",
-        "GLMR/USDT",
-        "MOB/USDT",
-        "FLOKI/USDT",
-        "GNO/USDT",
-        "SEI/USDT",
-        "AR/USDT",
-        "ALICE/USDT",
-        "ASTR/USDT",
-        "ILV/USDT",
-        "DODO/USDT",
-        "RDNT/USDT",
-        "LPT/USDT",
-        "BURGER/USDT",
-        "AERGO/USDT",
-        "ARDR/USDT",
-        "RLC/USDT",
-        "FOR/USDT",
-        "SANTOS/USDT",
-        "DAR/USDT",
-        "MBL/USDT",
-        "CYBER/USDT",
-        "FIO/USDT",
-        "LOKA/USDT",
-        "STPT/USDT",
-        "LINK/USDT",
-        "ICX/USDT",
-        "EPX/USDT",
-        "DOCK/USDT",
-        "JASMY/USDT",
-        "FORTH/USDT",
-        "HOOK/USDT",
-        "ASR/USDT",
-        "POND/USDT",
-        "XVG/USDT",
-        "HIGH/USDT",
-        "CTSI/USDT",
-        "OSMO/USDT",
-        "NEO/USDT",
-        "KMD/USDT",
-        "OGN/USDT",
-        "YGG/USDT",
-        "REI/USDT",
-        "GALA/USDT",
-        "LRC/USDT",
-        "MDX/USDT",
-        "FLUX/USDT",
-        "PNT/USDT",
-        "ARK/USDT",
-        "SUI/USDT",
-        "PSG/USDT",
-        "AST/USDT",
-        "CITY/USDT",
-        "CHZ/USDT",
-        "HBAR/USDT",
-        "CHESS/USDT",
-        "UMA/USDT",
-        "GNS/USDT",
-        "GAL/USDT",
-        "POLS/USDT",
-        "CAKE/USDT",
-        "QUICK/USDT",
-        "ARKM/USDT",
-        "MAV/USDT",
-        "COMBO/USDT",
-        "ELF/USDT",
-        "PHA/USDT",
-        "STRAX/USDT",
-        "MKR/USDT",
-        "XEC/USDT",
-        "ALPINE/USDT",
-        "CREAM/USDT",
-        "COTI/USDT",
-        "RVN/USDT",
-        "STORJ/USDT",
-        "FIRO/USDT",
-        "GRT/USDT",
-        "CELO/USDT",
-        "PIVX/USDT",
-        "KAVA/USDT",
-        "QKC/USDT",
-        "DUSK/USDT",
-        "FTM/USDT",
-        "MDT/USDT",
-        "GTC/USDT",
-        "BAR/USDT",
-        "XEM/USDT",
-        "TFUEL/USDT",
-        "RPL/USDT",
-        "OAX/USDT",
-        "ROSE/USDT",
-        "NFP/USDT",
-        "C98/USDT",
-        "KNC/USDT",
-        "ANT/USDT",
-        "AVA/USDT",
-        "ACM/USDT",
-        "KDA/USDT",
-        "SFP/USDT",
-        "OCEAN/USDT",
-        "HFT/USDT",
-        "RAD/USDT",
-        "ENJ/USDT",
-        "FTT/USDT",
-        "MOVR/USDT",
-        "SAND/USDT",
-        "PEPE/USDT",
-        "SYN/USDT",
-        "WNXM/USDT",
-        "GMT/USDT",
-        "SUN/USDT",
-        "QTUM/USDT",
-        "PYR/USDT",
-        "SSV/USDT",
-        "ENS/USDT",
-        "VOXEL/USDT",
-        "KP3R/USDT",
-        "SUPER/USDT",
-        "STG/USDT",
-        "BLZ/USDT",
-        "LUNA/USDT",
-        "ACE/USDT",
-        "REQ/USDT",
-        "ONG/USDT",
-        "TWT/USDT",
-        "AMB/USDT",
-        "WAVES/USDT",
-        "FUN/USDT",
-        "XTZ/USDT",
-        "ARB/USDT",
-        "CKB/USDT",
-        "IDEX/USDT",
-        "GHST/USDT",
-        "SXP/USDT",
-        "BAND/USDT",
-        "POWR/USDT",
-        "PROM/USDT",
-        "ARPA/USDT",
-        "ID/USDT",
-        "BSW/USDT",
-        "DEGO/USDT",
-        "PUNDIX/USDT",
-        "APT/USDT",
-        "ALCX/USDT",
-        "FRONT/USDT",
-        "ERN/USDT",
-        "AGLD/USDT",
-        "SNT/USDT",
-        "NTRN/USDT",
-        "FXS/USDT",
-        "AUDIO/USDT",
-        "GLM/USDT",
-        "DCR/USDT",
-        "DIA/USDT",
-        "CLV/USDT",
-        "RAY/USDT",
-        "TRU/USDT",
-        "LUNC/USDT",
-        "JST/USDT",
-        "STX/USDT",
-        "FIDA/USDT",
-        "TLM/USDT",
-        "NMR/USDT",
-        "FIS/USDT",
-        "RUNE/USDT",
-        "XVS/USDT",
-        "BLUR/USDT",
-        "BOND/USDT",
-        "HARD/USDT",
-        "FARM/USDT",
-        "WLD/USDT",
-        "QNT/USDT",
-        "MLN/USDT",
-        "STMX/USDT",
-        "CVX/USDT",
-        "OXT/USDT",
-        "IQ/USDT",
-        "NEAR/USDT",
-        "BONK/USDT",
-        "APE/USDT"
+      "BTC/USDT",
+      "ETH/USDT",
+      "BNB/USDT",
+      "NEO/USDT",
+      "LTC/USDT",
+      "QTUM/USDT",
+      "ADA/USDT",
+      "XRP/USDT",
+      "EOS/USDT",
+      "TUSD/USDT",
+      "IOTA/USDT",
+      "XLM/USDT",
+      "ONT/USDT",
+      "TRX/USDT",
+      "ETC/USDT",
+      "ICX/USDT",
+      "NULS/USDT",
+      "VET/USDT",
+      "USDC/USDT",
+      "LINK/USDT",
+      "ONG/USDT",
+      "HOT/USDT",
+      "ZIL/USDT",
+      "ZRX/USDT",
+      "FET/USDT",
+      "BAT/USDT",
+      "ZEC/USDT",
+      "IOST/USDT",
+      "CELR/USDT",
+      "DASH/USDT",
+      "THETA/USDT",
+      "ENJ/USDT",
+      "ATOM/USDT",
+      "TFUEL/USDT",
+      "ONE/USDT",
+      "FTM/USDT",
+      "ALGO/USDT",
+      "DOGE/USDT",
+      "DUSK/USDT",
+      "ANKR/USDT",
+      "WIN/USDT",
+      "COS/USDT",
+      "MTL/USDT",
+      "DENT/USDT",
+      "KEY/USDT",
+      "WAN/USDT",
+      "FUN/USDT",
+      "CVC/USDT",
+      "CHZ/USDT",
+      "BAND/USDT",
+      "XTZ/USDT",
+      "REN/USDT",
+      "RVN/USDT",
+      "HBAR/USDT",
+      "NKN/USDT",
+      "STX/USDT",
+      "KAVA/USDT",
+      "ARPA/USDT",
+      "IOTX/USDT",
+      "RLC/USDT",
+      "CTXC/USDT",
+      "BCH/USDT",
+      "TROY/USDT",
+      "VITE/USDT",
+      "FTT/USDT",
+      "EUR/USDT",
+      "OGN/USDT",
+      "WRX/USDT",
+      "LSK/USDT",
+      "BNT/USDT",
+      "LTO/USDT",
+      "MBL/USDT",
+      "COTI/USDT",
+      "STPT/USDT",
+      "DATA/USDT",
+      "SOL/USDT",
+      "CTSI/USDT",
+      "HIVE/USDT",
+      "CHR/USDT",
+      "ARDR/USDT",
+      "MDT/USDT",
+      "STMX/USDT",
+      "KNC/USDT",
+      "LRC/USDT",
+      "COMP/USDT",
+      "SC/USDT",
+      "ZEN/USDT",
+      "SNX/USDT",
+      "VTHO/USDT",
+      "DGB/USDT",
+      "SXP/USDT",
+      "MKR/USDT",
+      "DCR/USDT",
+      "STORJ/USDT",
+      "MANA/USDT",
+      "YFI/USDT",
+      "BAL/USDT",
+      "BLZ/USDT",
+      "IRIS/USDT",
+      "KMD/USDT",
+      "JST/USDT",
+      "CRV/USDT",
+      "SAND/USDT",
+      "NMR/USDT",
+      "DOT/USDT",
+      "LUNA/USDT",
+      "RSR/USDT",
+      "PAXG/USDT",
+      "TRB/USDT",
+      "SUSHI/USDT",
+      "KSM/USDT",
+      "EGLD/USDT",
+      "DIA/USDT",
+      "RUNE/USDT",
+      "FIO/USDT",
+      "UMA/USDT",
+      "BEL/USDT",
+      "WING/USDT",
+      "UNI/USDT",
+      "OXT/USDT",
+      "SUN/USDT",
+      "AVAX/USDT",
+      "FLM/USDT",
+      "UTK/USDT",
+      "XVS/USDT",
+      "ALPHA/USDT",
+      "AAVE/USDT",
+      "NEAR/USDT",
+      "FIL/USDT",
+      "INJ/USDT",
+      "AUDIO/USDT",
+      "CTK/USDT",
+      "AKRO/USDT",
+      "AXS/USDT",
+      "HARD/USDT",
+      "STRAX/USDT",
+      "UNFI/USDT",
+      "ROSE/USDT",
+      "AVA/USDT",
+      "SKL/USDT",
+      "GRT/USDT",
+      "JUV/USDT",
+      "PSG/USDT",
+      "1INCH/USDT",
+      "OG/USDT",
+      "ATM/USDT",
+      "ASR/USDT",
+      "CELO/USDT",
+      "RIF/USDT",
+      "TRU/USDT",
+      "CKB/USDT",
+      "TWT/USDT",
+      "FIRO/USDT",
+      "LIT/USDT",
+      "SFP/USDT",
+      "DODO/USDT",
+      "CAKE/USDT",
+      "ACM/USDT",
+      "BADGER/USDT",
+      "FIS/USDT",
+      "OM/USDT",
+      "POND/USDT",
+      "DEGO/USDT",
+      "ALICE/USDT",
+      "LINA/USDT",
+      "PERP/USDT",
+      "SUPER/USDT",
+      "CFX/USDT",
+      "TKO/USDT",
+      "PUNDIX/USDT",
+      "TLM/USDT",
+      "BAR/USDT",
+      "FORTH/USDT",
+      "BAKE/USDT",
+      "BURGER/USDT",
+      "SLP/USDT",
+      "SHIB/USDT",
+      "ICP/USDT",
+      "AR/USDT",
+      "MASK/USDT",
+      "LPT/USDT",
+      "XVG/USDT",
+      "ATA/USDT",
+      "GTC/USDT",
+      "ERN/USDT",
+      "KLAY/USDT",
+      "PHA/USDT",
+      "MLN/USDT",
+      "DEXE/USDT",
+      "C98/USDT",
+      "CLV/USDT",
+      "QNT/USDT",
+      "FLOW/USDT",
+      "MINA/USDT",
+      "RAY/USDT",
+      "FARM/USDT",
+      "ALPACA/USDT",
+      "QUICK/USDT",
+      "MBOX/USDT",
+      "REQ/USDT",
+      "GHST/USDT",
+      "WAXP/USDT",
+      "GNO/USDT",
+      "XEC/USDT",
+      "ELF/USDT",
+      "DYDX/USDT",
+      "IDEX/USDT",
+      "VIDT/USDT",
+      "USDP/USDT",
+      "GALA/USDT",
+      "ILV/USDT",
+      "YGG/USDT",
+      "SYS/USDT",
+      "DF/USDT",
+      "FIDA/USDT",
+      "AGLD/USDT",
+      "RAD/USDT",
+      "BETA/USDT",
+      "RARE/USDT",
+      "LAZIO/USDT",
+      "CHESS/USDT",
+      "ADX/USDT",
+      "AUCTION/USDT",
+      "DAR/USDT",
+      "BNX/USDT",
+      "MOVR/USDT",
+      "CITY/USDT",
+      "ENS/USDT",
+      "KP3R/USDT",
+      "QI/USDT",
+      "PORTO/USDT",
+      "POWR/USDT",
+      "JASMY/USDT",
+      "AMP/USDT",
+      "PYR/USDT",
+      "ALCX/USDT",
+      "SANTOS/USDT",
+      "BICO/USDT",
+      "FLUX/USDT",
+      "FXS/USDT",
+      "VOXEL/USDT",
+      "HIGH/USDT",
+      "CVX/USDT",
+      "PEOPLE/USDT",
+      "OOKI/USDT",
+      "SPELL/USDT",
+      "JOE/USDT",
+      "ACH/USDT",
+      "IMX/USDT",
+      "GLMR/USDT",
+      "LOKA/USDT",
+      "SCRT/USDT",
+      "API3/USDT",
+      "BTTC/USDT",
+      "ACA/USDT",
+      "XNO/USDT",
+      "WOO/USDT",
+      "ALPINE/USDT",
+      "T/USDT",
+      "ASTR/USDT",
+      "GMT/USDT",
+      "KDA/USDT",
+      "APE/USDT",
+      "BSW/USDT",
+      "BIFI/USDT",
+      "STEEM/USDT",
+      "NEXO/USDT",
+      "REI/USDT",
+      "LDO/USDT",
+      "OP/USDT",
+      "LEVER/USDT",
+      "STG/USDT",
+      "LUNC/USDT",
+      "GMX/USDT",
+      "POLYX/USDT",
+      "APT/USDT",
+      "OSMO/USDT",
+      "HFT/USDT",
+      "PHB/USDT",
+      "HOOK/USDT",
+      "MAGIC/USDT",
+      "HIFI/USDT",
+      "RPL/USDT",
+      "PROS/USDT",
+      "GNS/USDT",
+      "SYN/USDT",
+      "VIB/USDT",
+      "SSV/USDT",
+      "LQTY/USDT",
+      "AMB/USDT",
+      "USTC/USDT",
+      "GAS/USDT",
+      "GLM/USDT",
+      "PROM/USDT",
+      "QKC/USDT",
+      "UFT/USDT",
+      "ID/USDT",
+      "ARB/USDT",
+      "OAX/USDT",
+      "RDNT/USDT",
+      "WBTC/USDT",
+      "EDU/USDT",
+      "SUI/USDT",
+      "AERGO/USDT",
+      "PEPE/USDT",
+      "FLOKI/USDT",
+      "AST/USDT",
+      "SNT/USDT",
+      "COMBO/USDT",
+      "MAV/USDT",
+      "PENDLE/USDT",
+      "ARKM/USDT",
+      "WBETH/USDT",
+      "WLD/USDT",
+      "FDUSD/USDT",
+      "SEI/USDT",
+      "CYBER/USDT",
+      "ARK/USDT",
+      "CREAM/USDT",
+      "GFT/USDT",
+      "IQ/USDT",
+      "NTRN/USDT",
+      "TIA/USDT",
+      "MEME/USDT",
+      "ORDI/USDT",
+      "BEAMX/USDT",
+      "PIVX/USDT",
+      "VIC/USDT",
+      "BLUR/USDT",
+      "VANRY/USDT",
+      "AEUR/USDT",
+      "JTO/USDT",
+      "1000SATS/USDT",
+      "BONK/USDT",
+      "ACE/USDT",
+      "NFP/USDT",
+      "AI/USDT",
+      "XAI/USDT",
+      "MANTA/USDT",
+      "ALT/USDT",
+      "JUP/USDT",
+      "PYTH/USDT",
+      "RONIN/USDT",
+      "DYM/USDT",
+      "PIXEL/USDT",
+      "STRK/USDT",
+      "PORTAL/USDT",
+      "PDA/USDT",
+      "AXL/USDT",
+      "WIF/USDT",
+      "METIS/USDT",
+      "AEVO/USDT",
+      "BOME/USDT",
+      "ETHFI/USDT",
+      "ENA/USDT",
+      "W/USDT",
+      "TNSR/USDT",
+      "SAGA/USDT",
+      "TAO/USDT",
+      "OMNI/USDT",
+      "REZ/USDT",
+      "BB/USDT",
+      "NOT/USDT",
+      "IO/USDT",
+      "ZK/USDT",
+      "LISTA/USDT",
+      "ZRO/USDT",
+      "G/USDT",
+      "BANANA/USDT",
+      "RENDER/USDT",
+      "TON/USDT",
+      "DOGS/USDT",
+      "EURI/USDT",
+      "SLF/USDT",
+      "POL/USDT",
+      "NEIRO/USDT",
+      "TURBO/USDT",
+      "1MBABYDOGE/USDT",
+      "CATI/USDT",
+      "HMSTR/USDT",
+      "EIGEN/USDT",
+      "SCR/USDT",
+      "BNSOL/USDT",
+      "LUMIA/USDT"
     ]
   },
   "pairlists": [
