--- a/ga.json.example
+++ b/ga.json.example
@@ -10,19 +10,22 @@
     "data_dir": "user_data/data/binance",
     "results_dir": "results",
     "config_file": "user_data/config.json",
-    "population_size": 32,
+    "population_size": 4,
     "generations": 20,
     "crossover_prob": 0.8,
     "mutation_prob": 0.2,
-    "backtest_timerange_weeks": 30,
+    "backtest_timerange_weeks": 9,
     "tournament_size": 3,
-    "pool_processes": 8,
+    "pool_processes": 4,
     "max_retries": 10,
     "retry_delay": 0.01,
+    "add_max_open_trades": true,
+    "add_dynamic_timeframes": false,
     "checkpoint_dir": "checkpoints",
     "checkpoint_frequency": 1,
     "project_dir": "/Users/zhangjiawei/Projects/GeneTrader",
     "best_generations_dir": "bestgenerations",
-    "base_strategy_file": "E0V1E.py",
-    "num_pairs": 40
+    "base_strategy_file": "Solipsis5.py",
+    "fix_pairs": true,
+    "num_pairs": 1
 }
