--- a/user_data/config.json
+++ b/user_data/config.json
@@ -1,5 +1,5 @@
 {
-  "max_open_trades": 4,
+  "max_open_trades": 3,
   "stake_currency": "USDT",
   "stake_amount": "unlimited",
   "tradable_balance_ratio": 0.99,
@@ -49,102 +49,102 @@
       "ETH/USDT",
       "SOL/USDT",
       "DOGE/USDT",
-      "NEIRO/USDT",
       "SUI/USDT",
-      "PEPE/USDT",
-      "SANTOS/USDT",
-      "WIF/USDT",
+      "NEIRO/USDT",
       "BNB/USDT",
-      "RUNE/USDT",
-      "TROY/USDT",
+      "PEPE/USDT",
       "XRP/USDT",
-      "SHIB/USDT",
-      "WLD/USDT",
-      "BOME/USDT",
-      "RAY/USDT",
-      "TAO/USDT",
-      "PEOPLE/USDT",
+      "WIF/USDT",
       "ENA/USDT",
-      "APT/USDT",
-      "JUP/USDT",
-      "SAGA/USDT",
-      "FLOKI/USDT",
-      "APE/USDT",
-      "OG/USDT",
-      "AVAX/USDT",
-      "TURBO/USDT",
-      "BONK/USDT",
+      "SHIB/USDT",
       "TIA/USDT",
-      "NEAR/USDT",
+      "MASK/USDT",
       "FET/USDT",
-      "ARB/USDT",
-      "SEI/USDT",
-      "ORDI/USDT",
-      "ADA/USDT",
+      "TROY/USDT",
+      "WLD/USDT",
+      "TAO/USDT",
+      "BOME/USDT",
+      "AVAX/USDT",
+      "NEAR/USDT",
+      "RUNE/USDT",
       "TRX/USDT",
-      "1000SATS/USDT",
-      "FTM/USDT",
-      "EIGEN/USDT",
-      "LAZIO/USDT",
-      "JTO/USDT",
-      "LINK/USDT",
-      "LTC/USDT",
-      "ALPINE/USDT",
-      "AST/USDT",
-      "EUR/USDT",
-      "TON/USDT",
-      "PENDLE/USDT",
-      "1MBABYDOGE/USDT",
-      "DOT/USDT",
-      "AAVE/USDT",
-      "SXP/USDT",
-      "OP/USDT",
-      "ARKM/USDT",
-      "IO/USDT",
-      "FIL/USDT",
+      "RAY/USDT",
+      "KAIA/USDT",
+      "ADA/USDT",
+      "APT/USDT",
       "UNI/USDT",
-      "SCR/USDT",
-      "STX/USDT",
-      "PORTO/USDT",
-      "OM/USDT",
+      "SEI/USDT",
+      "FLOKI/USDT",
+      "LINK/USDT",
+      "ARB/USDT",
+      "TON/USDT",
+      "DOT/USDT",
+      "OG/USDT",
+      "EUR/USDT",
+      "1000SATS/USDT",
+      "SANTOS/USDT",
       "BCH/USDT",
-      "POL/USDT",
-      "STORJ/USDT",
+      "FTM/USDT",
+      "ARKM/USDT",
+      "LTC/USDT",
+      "PENDLE/USDT",
+      "MKR/USDT",
+      "PYTH/USDT",
+      "BONK/USDT",
+      "ETHFI/USDT",
+      "ORDI/USDT",
+      "APE/USDT",
+      "PEOPLE/USDT",
+      "SAGA/USDT",
+      "AAVE/USDT",
+      "HARD/USDT",
+      "1MBABYDOGE/USDT",
+      "JUP/USDT",
+      "BICO/USDT",
+      "TURBO/USDT",
+      "OM/USDT",
+      "BETA/USDT",
+      "IMX/USDT",
+      "STX/USDT",
+      "OP/USDT",
+      "RENDER/USDT",
       "DYDX/USDT",
       "DOGS/USDT",
-      "GALA/USDT",
-      "NOT/USDT",
-      "API3/USDT",
-      "RENDER/USDT",
-      "PYTH/USDT",
-      "MEME/USDT",
-      "CATI/USDT",
-      "ETHFI/USDT",
-      "ARDR/USDT",
-      "FIDA/USDT",
-      "ACH/USDT",
-      "ZK/USDT",
-      "ZRO/USDT",
-      "WING/USDT",
-      "HMSTR/USDT",
-      "CHZ/USDT",
       "INJ/USDT",
-      "STRK/USDT",
-      "SUPER/USDT",
-      "CRV/USDT",
-      "PSG/USDT",
-      "PIXEL/USDT",
-      "BANANA/USDT",
-      "AR/USDT",
-      "TNSR/USDT",
-      "WBTC/USDT",
-      "DIA/USDT",
-      "MANTA/USDT",
-      "VIB/USDT",
+      "EIGEN/USDT",
       "ICP/USDT",
-      "MKR/USDT",
+      "FIL/USDT",
+      "MEME/USDT",
+      "PIXEL/USDT",
+      "USTC/USDT",
+      "NOT/USDT",
+      "PORTO/USDT",
+      "CRV/USDT",
+      "POL/USDT",
+      "HOT/USDT",
+      "GALA/USDT",
+      "IO/USDT",
+      "ZRO/USDT",
+      "LUMIA/USDT",
+      "WBTC/USDT",
+      "SCR/USDT",
+      "ZK/USDT",
+      "HBAR/USDT",
+      "PROM/USDT",
+      "LUNC/USDT",
+      "MANTA/USDT",
+      "STRK/USDT",
+      "W/USDT",
+      "PYR/USDT",
+      "BAR/USDT",
+      "LDO/USDT",
+      "ID/USDT",
+      "CHZ/USDT",
       "ATOM/USDT",
-      "JASMY/USDT"
+      "JTO/USDT",
+      "ETC/USDT",
+      "HMSTR/USDT",
+      "VIDT/USDT"
     ]
   },
   "pairlists": [
