--- a/ga.json.example
+++ b/ga.json.example
@@ -10,12 +10,12 @@
     "data_dir": "user_data/data/binance",
     "results_dir": "results",
     "config_file": "user_data/config.json",
-    "population_size": 4,
-    "generations": 20,
+    "population_size": 30,
+    "generations": 30,
     "crossover_prob": 0.8,
     "mutation_prob": 0.2,
-    "backtest_timerange_weeks": 9,
-    "tournament_size": 3,
+    "backtest_timerange_weeks": 30,
+    "tournament_size": 2,
     "pool_processes": 4,
     "max_retries": 10,
     "retry_delay": 0.01,
@@ -25,7 +25,7 @@
     "checkpoint_frequency": 1,
     "project_dir": "/Users/zhangjiawei/Projects/GeneTrader",
     "best_generations_dir": "bestgenerations",
-    "base_strategy_file": "candidates/Solipsis5.py",
+    "base_strategy_file": "candidates/sample.py",
     "fix_pairs": true,
     "num_pairs": 1
 }
