--- a/user_data/config_top70.json
+++ b/user_data/config_top70.json
@@ -49,72 +49,72 @@
       "ETH/USDT",
       "SOL/USDT",
       "DOGE/USDT",
-      "PEPE/USDT",
-      "SUI/USDT",
-      "NEIRO/USDT",
       "BNB/USDT",
+      "PEPE/USDT",
+      "NEIRO/USDT",
       "WIF/USDT",
+      "SUI/USDT",
       "XRP/USDT",
-      "TIA/USDT",
-      "WLD/USDT",
-      "BOME/USDT",
-      "RUNE/USDT",
-      "ENA/USDT",
-      "FET/USDT",
-      "AVAX/USDT",
-      "RAY/USDT",
-      "1000SATS/USDT",
-      "APE/USDT",
-      "NEAR/USDT",
-      "TAO/USDT",
-      "ARB/USDT",
-      "APT/USDT",
-      "FLOKI/USDT",
-      "SHIB/USDT",
-      "ARKM/USDT",
-      "SEI/USDT",
       "ADA/USDT",
-      "LINK/USDT",
-      "TRX/USDT",
-      "FTM/USDT",
-      "DOGS/USDT",
-      "ORDI/USDT",
-      "1MBABYDOGE/USDT",
-      "PEOPLE/USDT",
-      "GHST/USDT",
+      "RAY/USDT",
       "TROY/USDT",
-      "EIGEN/USDT",
-      "BONK/USDT",
-      "DOT/USDT",
-      "UNI/USDT",
-      "OP/USDT",
-      "LTC/USDT",
+      "HMSTR/USDT",
+      "SHIB/USDT",
+      "STG/USDT",
+      "PEOPLE/USDT",
+      "WLD/USDT",
+      "ENA/USDT",
+      "AVAX/USDT",
+      "DOGS/USDT",
+      "BOME/USDT",
       "NOT/USDT",
-      "INJ/USDT",
-      "TON/USDT",
-      "ETHFI/USDT",
-      "BCH/USDT",
-      "TURBO/USDT",
-      "SAGA/USDT",
-      "GALA/USDT",
-      "PENDLE/USDT",
-      "PROS/USDT",
-      "OG/USDT",
-      "FIL/USDT",
-      "JUP/USDT",
-      "RENDER/USDT",
-      "AAVE/USDT",
-      "SXP/USDT",
-      "PYTH/USDT",
-      "W/USDT",
-      "RARE/USDT",
-      "DYDX/USDT",
-      "ICP/USDT",
-      "SANTOS/USDT",
-      "IMX/USDT",
-      "ZRO/USDT",
+      "ARB/USDT",
+      "LINK/USDT",
       "POL/USDT",
-      "STX/USDT"
+      "TON/USDT",
+      "ORDI/USDT",
+      "MOVR/USDT",
+      "JUP/USDT",
+      "TIA/USDT",
+      "NEAR/USDT",
+      "FTM/USDT",
+      "CATI/USDT",
+      "RUNE/USDT",
+      "AAVE/USDT",
+      "TAO/USDT",
+      "CETUS/USDT",
+      "SEI/USDT",
+      "UNI/USDT",
+      "FET/USDT",
+      "COW/USDT",
+      "EIGEN/USDT",
+      "1000SATS/USDT",
+      "FLOKI/USDT",
+      "JTO/USDT",
+      "SCR/USDT",
+      "PROS/USDT",
+      "PENDLE/USDT",
+      "ICP/USDT",
+      "APT/USDT",
+      "TURBO/USDT",
+      "DOT/USDT",
+      "FIL/USDT",
+      "ARKM/USDT",
+      "ETHFI/USDT",
+      "OP/USDT",
+      "BONK/USDT",
+      "TRB/USDT",
+      "SAGA/USDT",
+      "LDO/USDT",
+      "LTC/USDT",
+      "AR/USDT",
+      "PYTH/USDT",
+      "CREAM/USDT",
+      "1MBABYDOGE/USDT",
+      "TRU/USDT",
+      "TRX/USDT",
+      "ENS/USDT",
+      "RENDER/USDT"
     ]
   },
   "pairlists": [
