--- a/user_data/config_70.json
+++ b/user_data/config_70.json
@@ -1,5 +1,5 @@
 {
-  "max_open_trades": 3,
+  "max_open_trades": 4,
   "stake_currency": "USDT",
   "stake_amount": "unlimited",
   "tradable_balance_ratio": 0.99,
@@ -45,14 +45,76 @@
       "rateLimit": 200
     },
     "pair_whitelist": [
-      "BTC/USDT",
+      "XRP/USDT",
       "ETH/USDT",
-      "SOL/USDT",
+      "BTC/USDT",
       "DOGE/USDT",
-      "TROY/USDT",
+      "SOL/USDT",
+      "ENS/USDT",
       "PEPE/USDT",
+      "WLD/USDT",
+      "ACT/USDT",
+      "ADA/USDT",
+      "SHIB/USDT",
+      "XLM/USDT",
+      "THE/USDT",
+      "ALGO/USDT",
+      "PNUT/USDT",
+      "FET/USDT",
+      "FIL/USDT",
+      "THETA/USDT",
+      "DOT/USDT",
       "SUI/USDT",
-      "BNB/USDT"
+      "CRV/USDT",
+      "HBAR/USDT",
+      "NEAR/USDT",
+      "ORDI/USDT",
+      "AVAX/USDT",
+      "FIDA/USDT",
+      "SAND/USDT",
+      "NEIRO/USDT",
+      "ARB/USDT",
+      "1000SATS/USDT",
+      "WIF/USDT",
+      "TAO/USDT",
+      "DGB/USDT",
+      "ENA/USDT",
+      "FTM/USDT",
+      "LINK/USDT",
+      "GALA/USDT",
+      "AR/USDT",
+      "XTZ/USDT",
+      "UNI/USDT",
+      "TIA/USDT",
+      "SEI/USDT",
+      "LTC/USDT",
+      "FLOKI/USDT",
+      "BONK/USDT",
+      "ETC/USDT",
+      "RUNE/USDT",
+      "ETHFI/USDT",
+      "BCH/USDT",
+      "APT/USDT",
+      "TON/USDT",
+      "OP/USDT",
+      "BOME/USDT",
+      "LUNA/USDT",
+      "AAVE/USDT",
+      "TRX/USDT",
+      "POL/USDT",
+      "ARKM/USDT",
+      "SSV/USDT",
+      "STRK/USDT",
+      "EIGEN/USDT",
+      "EOS/USDT",
+      "RENDER/USDT",
+      "ICP/USDT",
+      "IO/USDT",
+      "DOGS/USDT",
+      "TRB/USDT",
+      "OM/USDT",
+      "REN/USDT",
+      "HOT/USDT"
     ]
   },
   "pairlists": [
