--- a/user_data/config_new.json
+++ b/user_data/config_new.json
@@ -1,5 +1,5 @@
 {
-  "max_open_trades": 3,
+  "max_open_trades": 4,
   "stake_currency": "USDT",
   "stake_amount": "unlimited",
   "tradable_balance_ratio": 0.99,
@@ -45,76 +45,106 @@
       "rateLimit": 200
     },
     "pair_whitelist": [
-      "BTC/USDT",
-      "ETH/USDT",
-      "SOL/USDT",
-      "DOGE/USDT",
-      "BNB/USDT",
-      "PEPE/USDT",
-      "NEIRO/USDT",
-      "WIF/USDT",
-      "SUI/USDT",
       "XRP/USDT",
-      "ADA/USDT",
-      "RAY/USDT",
-      "TROY/USDT",
-      "HMSTR/USDT",
+      "BTC/USDT",
+      "DOGE/USDT",
+      "ETH/USDT",
       "SHIB/USDT",
-      "STG/USDT",
-      "PEOPLE/USDT",
+      "PEPE/USDT",
+      "SOL/USDT",
+      "HBAR/USDT",
+      "ADA/USDT",
+      "XLM/USDT",
+      "LTC/USDT",
+      "ALGO/USDT",
+      "NEIRO/USDT",
+      "PNUT/USDT",
+      "ACT/USDT",
       "WLD/USDT",
-      "ENA/USDT",
-      "AVAX/USDT",
-      "DOGS/USDT",
-      "BOME/USDT",
-      "NOT/USDT",
-      "ARB/USDT",
-      "LINK/USDT",
-      "POL/USDT",
-      "TON/USDT",
-      "ORDI/USDT",
-      "MOVR/USDT",
-      "JUP/USDT",
-      "TIA/USDT",
-      "NEAR/USDT",
-      "FTM/USDT",
-      "CATI/USDT",
-      "RUNE/USDT",
-      "AAVE/USDT",
-      "TAO/USDT",
-      "CETUS/USDT",
-      "SEI/USDT",
-      "UNI/USDT",
-      "FET/USDT",
-      "COW/USDT",
-      "EIGEN/USDT",
-      "1000SATS/USDT",
+      "ZRO/USDT",
+      "WIF/USDT",
+      "THE/USDT",
+      "SUI/USDT",
       "FLOKI/USDT",
-      "JTO/USDT",
-      "SCR/USDT",
-      "PROS/USDT",
-      "PENDLE/USDT",
-      "ICP/USDT",
-      "APT/USDT",
-      "TURBO/USDT",
       "DOT/USDT",
       "FIL/USDT",
-      "ARKM/USDT",
-      "ETHFI/USDT",
-      "OP/USDT",
       "BONK/USDT",
-      "TRB/USDT",
-      "SAGA/USDT",
-      "LDO/USDT",
-      "LTC/USDT",
-      "AR/USDT",
-      "PYTH/USDT",
-      "CREAM/USDT",
-      "1MBABYDOGE/USDT",
-      "TRU/USDT",
-      "TRX/USDT",
+      "AVAX/USDT",
+      "FET/USDT",
+      "EOS/USDT",
       "ENS/USDT",
-      "RENDER/USDT"
+      "FTM/USDT",
+      "BCH/USDT",
+      "CRV/USDT",
+      "ZK/USDT",
+      "TRX/USDT",
+      "ARB/USDT",
+      "LINK/USDT",
+      "NEAR/USDT",
+      "ENA/USDT",
+      "ORDI/USDT",
+      "IOTA/USDT",
+      "THETA/USDT",
+      "BOME/USDT",
+      "UNI/USDT",
+      "GALA/USDT",
+      "SAND/USDT",
+      "XTZ/USDT",
+      "1000SATS/USDT",
+      "TIA/USDT",
+      "OP/USDT",
+      "ETC/USDT",
+      "POL/USDT",
+      "APT/USDT",
+      "W/USDT",
+      "CVX/USDT",
+      "SEI/USDT",
+      "KAIA/USDT",
+      "ICP/USDT",
+      "TAO/USDT",
+      "RUNE/USDT",
+      "AR/USDT",
+      "EIGEN/USDT",
+      "ATOM/USDT",
+      "AUCTION/USDT",
+      "VET/USDT",
+      "APE/USDT",
+      "DOGS/USDT",
+      "JUP/USDT",
+      "STX/USDT",
+      "ETHFI/USDT",
+      "AAVE/USDT",
+      "STRK/USDT",
+      "TON/USDT",
+      "FIDA/USDT",
+      "EUR/USDT",
+      "CFX/USDT",
+      "BLUR/USDT",
+      "SCRT/USDT",
+      "DASH/USDT",
+      "USUAL/USDT",
+      "PEOPLE/USDT",
+      "MEME/USDT",
+      "LDO/USDT",
+      "ALT/USDT",
+      "CHZ/USDT",
+      "IO/USDT",
+      "NOT/USDT",
+      "PENDLE/USDT",
+      "INJ/USDT",
+      "ARKM/USDT",
+      "SAGA/USDT",
+      "TURBO/USDT",
+      "LUNC/USDT",
+      "1MBABYDOGE/USDT",
+      "IOST/USDT",
+      "JASMY/USDT",
+      "SSV/USDT",
+      "CKB/USDT",
+      "OM/USDT",
+      "LUNA/USDT",
+      "GRT/USDT",
+      "AEVO/USDT"
     ]
   },
   "pairlists": [
