--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pandas==2.0.1
 freqtrade==2023.5
 
 # Logging (if custom logging is implemented)
-loguru==0.7.0
+loguru>=0.6.0
 
 # Genetic algorithm
 deap==1.3.3
@@ -25,3 +25,7 @@ seaborn==0.12.2
 pytest==7.3.1
 flake8==6.0.0
 black==23.3.0
+
+# Delisting monitor
+beautifulsoup4>=4.9.3
+requests>=2.25.1
