--- a/user_data/config.json
+++ b/user_data/config.json
@@ -1,5 +1,5 @@
 {
-  "max_open_trades": 3,
+  "max_open_trades": 4,
   "stake_currency": "USDT",
   "stake_amount": "unlimited",
   "tradable_balance_ratio": 0.99,
@@ -47,104 +47,380 @@
     "pair_whitelist": [
       "BTC/USDT",
       "ETH/USDT",
-      "SOL/USDT",
-      "DOGE/USDT",
-      "SUI/USDT",
-      "NEIRO/USDT",
       "BNB/USDT",
-      "PEPE/USDT",
-      "XRP/USDT",
-      "WIF/USDT",
-      "ENA/USDT",
-      "SHIB/USDT",
-      "TIA/USDT",
-      "MASK/USDT",
-      "FET/USDT",
-      "TROY/USDT",
-      "WLD/USDT",
-      "TAO/USDT",
-      "BOME/USDT",
-      "AVAX/USDT",
-      "NEAR/USDT",
-      "RUNE/USDT",
-      "TRX/USDT",
-      "RAY/USDT",
-      "KAIA/USDT",
-      "ADA/USDT",
-      "APT/USDT",
-      "UNI/USDT",
-      "SEI/USDT",
-      "FLOKI/USDT",
-      "LINK/USDT",
-      "ARB/USDT",
-      "TON/USDT",
-      "DOT/USDT",
-      "OG/USDT",
-      "EUR/USDT",
-      "1000SATS/USDT",
-      "SANTOS/USDT",
-      "BCH/USDT",
-      "FTM/USDT",
-      "ARKM/USDT",
+      "NEO/USDT",
       "LTC/USDT",
-      "PENDLE/USDT",
-      "MKR/USDT",
-      "PYTH/USDT",
-      "BONK/USDT",
-      "ETHFI/USDT",
-      "ORDI/USDT",
-      "APE/USDT",
-      "PEOPLE/USDT",
-      "SAGA/USDT",
-      "AAVE/USDT",
-      "HARD/USDT",
-      "1MBABYDOGE/USDT",
-      "JUP/USDT",
-      "BICO/USDT",
-      "TURBO/USDT",
-      "OM/USDT",
-      "BETA/USDT",
-      "IMX/USDT",
-      "STX/USDT",
-      "OP/USDT",
-      "RENDER/USDT",
-      "DYDX/USDT",
-      "DOGS/USDT",
-      "INJ/USDT",
-      "EIGEN/USDT",
-      "ICP/USDT",
-      "FIL/USDT",
-      "MEME/USDT",
-      "PIXEL/USDT",
-      "USTC/USDT",
-      "NOT/USDT",
-      "PORTO/USDT",
-      "CRV/USDT",
-      "POL/USDT",
-      "HOT/USDT",
-      "GALA/USDT",
-      "IO/USDT",
-      "ZRO/USDT",
-      "LUMIA/USDT",
-      "WBTC/USDT",
-      "SCR/USDT",
-      "ZK/USDT",
-      "HBAR/USDT",
-      "PROM/USDT",
-      "LUNC/USDT",
-      "MANTA/USDT",
-      "STRK/USDT",
-      "W/USDT",
-      "PYR/USDT",
-      "BAR/USDT",
-      "LDO/USDT",
-      "ID/USDT",
-      "CHZ/USDT",
-      "ATOM/USDT",
-      "JTO/USDT",
+      "QTUM/USDT",
+      "ADA/USDT",
+      "XRP/USDT",
+      "EOS/USDT",
+      "IOTA/USDT",
+      "XLM/USDT",
+      "ONT/USDT",
+      "TRX/USDT",
       "ETC/USDT",
+      "ICX/USDT",
+      "NULS/USDT",
+      "VET/USDT",
+      "LINK/USDT",
+      "ONG/USDT",
+      "HOT/USDT",
+      "ZIL/USDT",
+      "ZRX/USDT",
+      "FET/USDT",
+      "BAT/USDT",
+      "ZEC/USDT",
+      "IOST/USDT",
+      "CELR/USDT",
+      "DASH/USDT",
+      "THETA/USDT",
+      "ENJ/USDT",
+      "ATOM/USDT",
+      "TFUEL/USDT",
+      "ONE/USDT",
+      "FTM/USDT",
+      "ALGO/USDT",
+      "DOGE/USDT",
+      "DUSK/USDT",
+      "ANKR/USDT",
+      "WIN/USDT",
+      "COS/USDT",
+      "MTL/USDT",
+      "DENT/USDT",
+      "KEY/USDT",
+      "WAN/USDT",
+      "FUN/USDT",
+      "CVC/USDT",
+      "CHZ/USDT",
+      "BAND/USDT",
+      "XTZ/USDT",
+      "REN/USDT",
+      "RVN/USDT",
+      "HBAR/USDT",
+      "NKN/USDT",
+      "STX/USDT",
+      "KAVA/USDT",
+      "ARPA/USDT",
+      "IOTX/USDT",
+      "RLC/USDT",
+      "CTXC/USDT",
+      "BCH/USDT",
+      "TROY/USDT",
+      "VITE/USDT",
+      "FTT/USDT",
+      "EUR/USDT",
+      "OGN/USDT",
+      "WRX/USDT",
+      "LSK/USDT",
+      "BNT/USDT",
+      "LTO/USDT",
+      "MBL/USDT",
+      "COTI/USDT",
+      "STPT/USDT",
+      "DATA/USDT",
+      "SOL/USDT",
+      "CTSI/USDT",
+      "HIVE/USDT",
+      "CHR/USDT",
+      "ARDR/USDT",
+      "MDT/USDT",
+      "STMX/USDT",
+      "KNC/USDT",
+      "LRC/USDT",
+      "COMP/USDT",
+      "SC/USDT",
+      "ZEN/USDT",
+      "SNX/USDT",
+      "VTHO/USDT",
+      "DGB/USDT",
+      "SXP/USDT",
+      "MKR/USDT",
+      "DCR/USDT",
+      "STORJ/USDT",
+      "MANA/USDT",
+      "YFI/USDT",
+      "BAL/USDT",
+      "BLZ/USDT",
+      "IRIS/USDT",
+      "KMD/USDT",
+      "JST/USDT",
+      "CRV/USDT",
+      "SAND/USDT",
+      "NMR/USDT",
+      "DOT/USDT",
+      "LUNA/USDT",
+      "RSR/USDT",
+      "PAXG/USDT",
+      "TRB/USDT",
+      "SUSHI/USDT",
+      "KSM/USDT",
+      "EGLD/USDT",
+      "DIA/USDT",
+      "RUNE/USDT",
+      "FIO/USDT",
+      "UMA/USDT",
+      "BEL/USDT",
+      "WING/USDT",
+      "UNI/USDT",
+      "OXT/USDT",
+      "SUN/USDT",
+      "AVAX/USDT",
+      "FLM/USDT",
+      "UTK/USDT",
+      "XVS/USDT",
+      "ALPHA/USDT",
+      "AAVE/USDT",
+      "NEAR/USDT",
+      "FIL/USDT",
+      "INJ/USDT",
+      "AUDIO/USDT",
+      "CTK/USDT",
+      "AKRO/USDT",
+      "AXS/USDT",
+      "HARD/USDT",
+      "STRAX/USDT",
+      "ROSE/USDT",
+      "AVA/USDT",
+      "SKL/USDT",
+      "GRT/USDT",
+      "JUV/USDT",
+      "PSG/USDT",
+      "1INCH/USDT",
+      "OG/USDT",
+      "ATM/USDT",
+      "ASR/USDT",
+      "CELO/USDT",
+      "RIF/USDT",
+      "TRU/USDT",
+      "CKB/USDT",
+      "TWT/USDT",
+      "FIRO/USDT",
+      "LIT/USDT",
+      "SFP/USDT",
+      "DODO/USDT",
+      "CAKE/USDT",
+      "ACM/USDT",
+      "BADGER/USDT",
+      "FIS/USDT",
+      "OM/USDT",
+      "POND/USDT",
+      "DEGO/USDT",
+      "ALICE/USDT",
+      "LINA/USDT",
+      "PERP/USDT",
+      "SUPER/USDT",
+      "CFX/USDT",
+      "TKO/USDT",
+      "PUNDIX/USDT",
+      "TLM/USDT",
+      "BAR/USDT",
+      "FORTH/USDT",
+      "BAKE/USDT",
+      "BURGER/USDT",
+      "SLP/USDT",
+      "SHIB/USDT",
+      "ICP/USDT",
+      "AR/USDT",
+      "MASK/USDT",
+      "LPT/USDT",
+      "XVG/USDT",
+      "ATA/USDT",
+      "GTC/USDT",
+      "ERN/USDT",
+      "PHA/USDT",
+      "MLN/USDT",
+      "DEXE/USDT",
+      "C98/USDT",
+      "CLV/USDT",
+      "QNT/USDT",
+      "FLOW/USDT",
+      "MINA/USDT",
+      "RAY/USDT",
+      "FARM/USDT",
+      "ALPACA/USDT",
+      "QUICK/USDT",
+      "MBOX/USDT",
+      "REQ/USDT",
+      "GHST/USDT",
+      "WAXP/USDT",
+      "GNO/USDT",
+      "XEC/USDT",
+      "ELF/USDT",
+      "DYDX/USDT",
+      "IDEX/USDT",
+      "VIDT/USDT",
+      "GALA/USDT",
+      "ILV/USDT",
+      "YGG/USDT",
+      "SYS/USDT",
+      "DF/USDT",
+      "FIDA/USDT",
+      "AGLD/USDT",
+      "RAD/USDT",
+      "BETA/USDT",
+      "RARE/USDT",
+      "LAZIO/USDT",
+      "CHESS/USDT",
+      "ADX/USDT",
+      "AUCTION/USDT",
+      "DAR/USDT",
+      "BNX/USDT",
+      "MOVR/USDT",
+      "CITY/USDT",
+      "ENS/USDT",
+      "QI/USDT",
+      "PORTO/USDT",
+      "POWR/USDT",
+      "JASMY/USDT",
+      "AMP/USDT",
+      "PYR/USDT",
+      "ALCX/USDT",
+      "SANTOS/USDT",
+      "BICO/USDT",
+      "FLUX/USDT",
+      "FXS/USDT",
+      "VOXEL/USDT",
+      "HIGH/USDT",
+      "CVX/USDT",
+      "PEOPLE/USDT",
+      "SPELL/USDT",
+      "JOE/USDT",
+      "ACH/USDT",
+      "IMX/USDT",
+      "GLMR/USDT",
+      "LOKA/USDT",
+      "SCRT/USDT",
+      "API3/USDT",
+      "BTTC/USDT",
+      "ACA/USDT",
+      "XNO/USDT",
+      "WOO/USDT",
+      "ALPINE/USDT",
+      "T/USDT",
+      "ASTR/USDT",
+      "GMT/USDT",
+      "KDA/USDT",
+      "APE/USDT",
+      "BSW/USDT",
+      "BIFI/USDT",
+      "STEEM/USDT",
+      "NEXO/USDT",
+      "REI/USDT",
+      "LDO/USDT",
+      "OP/USDT",
+      "LEVER/USDT",
+      "STG/USDT",
+      "LUNC/USDT",
+      "GMX/USDT",
+      "POLYX/USDT",
+      "APT/USDT",
+      "OSMO/USDT",
+      "HFT/USDT",
+      "PHB/USDT",
+      "HOOK/USDT",
+      "MAGIC/USDT",
+      "HIFI/USDT",
+      "RPL/USDT",
+      "PROS/USDT",
+      "GNS/USDT",
+      "SYN/USDT",
+      "VIB/USDT",
+      "SSV/USDT",
+      "LQTY/USDT",
+      "AMB/USDT",
+      "USTC/USDT",
+      "GAS/USDT",
+      "GLM/USDT",
+      "PROM/USDT",
+      "QKC/USDT",
+      "UFT/USDT",
+      "ID/USDT",
+      "ARB/USDT",
+      "OAX/USDT",
+      "RDNT/USDT",
+      "WBTC/USDT",
+      "EDU/USDT",
+      "SUI/USDT",
+      "AERGO/USDT",
+      "PEPE/USDT",
+      "FLOKI/USDT",
+      "AST/USDT",
+      "SNT/USDT",
+      "COMBO/USDT",
+      "MAV/USDT",
+      "PENDLE/USDT",
+      "ARKM/USDT",
+      "WBETH/USDT",
+      "WLD/USDT",
+      "SEI/USDT",
+      "CYBER/USDT",
+      "ARK/USDT",
+      "CREAM/USDT",
+      "GFT/USDT",
+      "IQ/USDT",
+      "NTRN/USDT",
+      "TIA/USDT",
+      "MEME/USDT",
+      "ORDI/USDT",
+      "BEAMX/USDT",
+      "PIVX/USDT",
+      "VIC/USDT",
+      "BLUR/USDT",
+      "VANRY/USDT",
+      "AEUR/USDT",
+      "JTO/USDT",
+      "1000SATS/USDT",
+      "BONK/USDT",
+      "ACE/USDT",
+      "NFP/USDT",
+      "AI/USDT",
+      "XAI/USDT",
+      "MANTA/USDT",
+      "ALT/USDT",
+      "JUP/USDT",
+      "PYTH/USDT",
+      "RONIN/USDT",
+      "DYM/USDT",
+      "PIXEL/USDT",
+      "STRK/USDT",
+      "PORTAL/USDT",
+      "PDA/USDT",
+      "AXL/USDT",
+      "WIF/USDT",
+      "METIS/USDT",
+      "AEVO/USDT",
+      "BOME/USDT",
+      "ETHFI/USDT",
+      "ENA/USDT",
+      "W/USDT",
+      "TNSR/USDT",
+      "SAGA/USDT",
+      "TAO/USDT",
+      "OMNI/USDT",
+      "REZ/USDT",
+      "BB/USDT",
+      "NOT/USDT",
+      "IO/USDT",
+      "ZK/USDT",
+      "LISTA/USDT",
+      "ZRO/USDT",
+      "G/USDT",
+      "BANANA/USDT",
+      "RENDER/USDT",
+      "TON/USDT",
+      "DOGS/USDT",
+      "EURI/USDT",
+      "SLF/USDT",
+      "POL/USDT",
+      "NEIRO/USDT",
+      "TURBO/USDT",
+      "1MBABYDOGE/USDT",
+      "CATI/USDT",
       "HMSTR/USDT",
-      "VIDT/USDT"
+      "EIGEN/USDT",
+      "SCR/USDT",
+      "BNSOL/USDT",
+      "LUMIA/USDT"
     ]
   },
   "pairlists": [
