--- a/strategies/config.json
+++ b/strategies/config.json
@@ -6,7 +6,7 @@
     "timeframe": "5m",
     "fiat_display_currency": "CNY",
     "dry_run": true,
-    "dry_run_wallet": 100,
+    "dry_run_wallet": 300,
     "cancel_open_orders_on_exit": false,
     "use_exit_signal": true,
     "exit_profit_only": false,
@@ -37,84 +37,113 @@
         "key": "",
         "secret": "",
         "ccxt_config": {
-            "enableRateLimit": true,
-            "httpsProxy": "http://127.0.0.1:7890"
+            "enableRateLimit": true
         },
         "ccxt_async_config": {
             "enableRateLimit": true,
             "rateLimit": 200
         },
         "pair_whitelist": [
-            "AR/USDT",
-            "SAND/USDT",
-            "PEPE/USDT",
-            "AVAX/USDT",
-            "ALGO/USDT",
-            "FIDA/USDT",
-            "XLM/USDT",
-            "ENS/USDT",
-            "SOL/USDT",
-            "RUNE/USDT",
-            "BONK/USDT",
-            "TIA/USDT",
-            "TON/USDT",
-            "NEAR/USDT",
-            "SSV/USDT",
-            "XRP/USDT",
-            "XTZ/USDT",
-            "TRX/USDT",
-            "ETHFI/USDT",
-            "BOME/USDT",
-            "NEIRO/USDT",
-            "HOT/USDT",
-            "OP/USDT",
+            "BTC/USDT",
             "ETH/USDT",
-            "OM/USDT",
-            "AAVE/USDT",
+            "XRP/USDT",
+            "SOL/USDT",
+            "DOGE/USDT",
+            "SUI/USDT",
+            "TRX/USDT",
+            "PEPE/USDT",
+            "WLD/USDT",
+            "PNUT/USDT",
+            "JASMY/USDT",
             "ADA/USDT",
-            "DGB/USDT",
-            "FIL/USDT",
-            "ETC/USDT",
-            "DOGS/USDT",
-            "TRB/USDT",
-            "POL/USDT",
-            "ICP/USDT",
-            "ARB/USDT",
-            "BCH/USDT",
+            "SHIB/USDT",
+            "HBAR/USDT",
+            "WIF/USDT",
+            "LTC/USDT",
             "FET/USDT",
-            "UNI/USDT",
+            "ACT/USDT",
+            "FTM/USDT",
+            "AVAX/USDT",
+            "DOT/USDT",
+            "NEAR/USDT",
+            "SAND/USDT",
+            "DYDX/USDT",
+            "ENA/USDT",
+            "LINK/USDT",
+            "FTT/USDT",
+            "GALA/USDT",
+            "TAO/USDT",
+            "CRV/USDT",
+            "ZRX/USDT",
+            "BONK/USDT",
             "SEI/USDT",
+            "ARB/USDT",
+            "NEIRO/USDT",
+            "XLM/USDT",
+            "UNI/USDT",
+            "FIL/USDT",
+            "TIA/USDT",
+            "APT/USDT",
+            "BCH/USDT",
+            "RUNE/USDT",
+            "RSR/USDT",
+            "ZRO/USDT",
+            "THE/USDT",
+            "OP/USDT",
+            "EOS/USDT",
+            "ALGO/USDT",
+            "BOME/USDT",
+            "INJ/USDT",
+            "FLOKI/USDT",
+            "ARKM/USDT",
+            "VET/USDT",
+            "ETC/USDT",
+            "POL/USDT",
+            "ORDI/USDT",
+            "AAVE/USDT",
+            "LPT/USDT",
+            "AR/USDT",
+            "STX/USDT",
+            "USUAL/USDT",
+            "ICP/USDT",
+            "JUP/USDT",
+            "EUR/USDT",
+            "DOGS/USDT",
+            "TON/USDT",
+            "ACX/USDT",
+            "NOT/USDT",
+            "THETA/USDT",
+            "PENDLE/USDT",
+            "ENS/USDT",
+            "LUNA/USDT",
+            "ATOM/USDT",
+            "ZK/USDT",
+            "LDO/USDT",
+            "ETHFI/USDT",
+            "XVG/USDT",
+            "GRT/USDT",
+            "IO/USDT",
             "STRK/USDT",
             "1000SATS/USDT",
-            "IO/USDT",
-            "APT/USDT",
-            "HBAR/USDT",
-            "BTC/USDT",
-            "FTM/USDT",
-            "SHIB/USDT",
+            "IOTA/USDT",
             "EIGEN/USDT",
-            "SUI/USDT",
-            "ENA/USDT",
-            "ORDI/USDT",
-            "TAO/USDT",
-            "DOGE/USDT",
-            "ARKM/USDT",
-            "LINK/USDT",
-            "WIF/USDT",
-            "ACT/USDT",
-            "RENDER/USDT",
-            "DOT/USDT",
-            "PNUT/USDT",
-            "GALA/USDT",
-            "CRV/USDT",
-            "REN/USDT",
-            "EOS/USDT",
-            "FLOKI/USDT",
-            "THE/USDT",
-            "THETA/USDT",
-            "WLD/USDT",
-            "LTC/USDT",
-            "LUNA/USDT"
+            "IQ/USDT",
+            "WBTC/USDT",
+            "DASH/USDT",
+            "CAKE/USDT",
+            "W/USDT",
+            "FIDA/USDT",
+            "APE/USDT",
+            "MANA/USDT",
+            "CHZ/USDT",
+            "LUNC/USDT",
+            "PEOPLE/USDT",
+            "AMP/USDT",
+            "TRB/USDT",
+            "AEVO/USDT",
+            "ZIL/USDT",
+            "COMP/USDT",
+            "KAIA/USDT"
         ]
     },
     "pairlists": [
@@ -126,6 +155,42 @@
             "seed": 42
         }
     ],
+    "telegram": {
+        "enabled": true,
+        "token": "7168332190:AAFcCE-HphKomZH5-syzCKDCjiPY9pdIKE4",
+        "chat_id": "569834350",
+        "keyboard": [
+            [
+                "/daily",
+                "/balance",
+                "/profit"
+            ],
+            [
+                "/status table",
+                "/status",
+                "/performance"
+            ],
+            [
+                "/logs",
+                "/whitelist"
+            ]
+        ],
+        "notification_settings": {
+            "status": "silent",
+            "warning": "on",
+            "startup": "silent",
+            "entry": "off",
+            "exit": "off",
+            "entry_cancel": "silent",
+            "exit_cancel": "silent",
+            "entry_fill": "silent",
+            "exit_fill": "silent",
+            "protection_trigger": "silent",
+            "protection_trigger_global": "silent"
+        },
+        "reload": true,
+        "balance_dust_level": 0.01
+    },
     "api_server": {
         "enabled": true,
         "listen_ip_address": "0.0.0.0",
@@ -133,8 +198,8 @@
         "verbosity": "info",
         "jwt_secret_key": "somethingrandom",
         "CORS_origins": [],
-        "username": "admin",
-        "password": "passwordispassword"
+        "username": "jwz",
+        "password": "zhangjiawei"
     },
     "bot_name": "freqtrade",
     "initial_state": "running",
