--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,4 @@ user_data/config*
 strategies/*              # 忽略 strategies 目录及其内容
 !strategies/.gitkeep      # 保留 .gitkeep 文件
 
-daily_results/*/genera*/config.json  # 忽略所有 daily_results 目录下的 genera* 子目录中的 config.json 文件
+daily_results/*/gen*/config.json  # 忽略所有 daily_results 目录下的 genera* 子目录中的 config.json 文件
